Fri Jul 14 12:22:49 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.am gtk-config.m4 gtk.m4: Move
	gtk-config to gtk-config-2.0 move gtk_.m4 to
	gtk-2.0.m4

	* Makefile.am gtk/Makefile.am gdk-pixbuf/Makefile.am
	gdk/Makefile.am demos/Makefile.am: Change 
	library names to libgtk-1.3.la, etc, so that we
	can distinguish gtk-1.2 and gtk-2.0 on the linkline.

	* Makefile.am gtk/Makefile.am gdk-pixbuf/Makefile.am
	gdk/Makefile.am gdk/x11/Makfile.am
	Move include files into /usr/include/gtk-2.0, 
	/usr/lib/gtk-2.0/include/
	 
	* autogen.sh acconfig.h configure.in gtk/gtkmain.c
	gtk/gtkintl.h: Change package for gettext from 
	gtk+ to gtk20. Put hack in autogen.sh to modify
	po/Makefile.in.in after gettextize to make this
	possible.

	* gtk+.spec: Some updates, not tested.

	* gdk-pixbuf/Makefile.am: Move loaders into
	$(libdir)/gtk-2.0/$(GTK_VERSION)/loaders.

	* gtk/Makefile.am gtk/gtkrc.c: Move RC file locations
	$(sysconfdir)/gtk-2.0 ~/.gtkrc-2.0; theme subdir
	to THEMENAME/gtk-2.0/. Move engine directory  to
	$(libdir)/gtk-2.0/$(GTK_VERSION)/engines
	
2000-07-12  Tor Lillqvist  <tml@iki.fi>

	Win32 changes, still doesn't build though.

	* gdk/makefile.cygwin
	* gdk/win32/makefile.cygwin
	* gtk/makefile.cygwin: Updates.

	* gdk/win32/gdkgc-win32.c (_gdk_win32_gc_new): Use the same
	default values for fg and bg pixel as X11 does (0 and 1), not
	black and white. Use PS_ENDCAP_FLAT and PS_JOIN_MITER by default.
	Use 0 for pen width by default (treated as 1 anyway later, but for
	apps that might check the value in the GdkGC).
	(gdk_win32_hdc_get, gdk_win32_hdc_release): New functions, public
	interface to gdk_gc_predraw and _postdraw.

	* gdk/win32/gdkwin32.h
	* gdk/gdk.def: Add gdk_win32_hdc_{get,release}.

	* gdk/win32/gdkcolor-win32.c (gdk_colormap_alloc1): Remove
	extraneous semicolon.

	* gdk/win32/gdkdrawable-win32.c: Check also for pen_width == 0.

	* gdk/win32/gdkimage-win32.c (gdk_image_new): Use the visual's depth,